[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menu/character_creator/character_creator.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/actor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/components/left_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/components/right_button.tscn" type="PackedScene" id=5]

[sub_resource type="ButtonGroup" id=1]

[node name="character_creator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="actor" parent="panel" instance=ExtResource( 3 )]
position = Vector2( 509.834, 241.068 )
scale = Vector2( 4, 4 )

[node name="vert_box" type="VBoxContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 296.0
margin_right = -300.0
margin_bottom = -40.0
custom_constants/separation = 5

[node name="hair_label" type="Label" parent="panel/vert_box"]
margin_right = 424.0
margin_bottom = 17.0
text = "Hair"
align = 1
valign = 1

[node name="hair_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 22.0
margin_right = 424.0
margin_bottom = 46.0
custom_constants/separation = 18
alignment = 1

[node name="hair_left_button" parent="panel/vert_box/hair_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../../name")
focus_neighbour_right = NodePath("../hair_right_button")
focus_neighbour_bottom = NodePath("../../hair_color_section/left_button")
group = SubResource( 1 )
clip_text = true

[node name="Label" type="Label" parent="panel/vert_box/hair_section"]
margin_left = 207.0
margin_top = 3.0
margin_right = 217.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="hair_right_button" parent="panel/vert_box/hair_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../hair_left_button")
focus_neighbour_top = NodePath("../../../name")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../hair_color_section/right_button")
group = SubResource( 1 )
clip_text = true

[node name="hair_color_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 51.0
margin_right = 424.0
margin_bottom = 83.0
custom_constants/separation = 7
alignment = 1

[node name="left_button" parent="panel/vert_box/hair_color_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../hair_section/hair_left_button")
focus_neighbour_right = NodePath("../right_button")
focus_neighbour_bottom = NodePath("../../shirt_section/shirt_left_button")
group = SubResource( 1 )
clip_text = true

[node name="hair_color" type="ColorRect" parent="panel/vert_box/hair_color_section"]
margin_left = 196.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="right_button" parent="panel/vert_box/hair_color_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../left_button")
focus_neighbour_top = NodePath("../../hair_section/hair_right_button")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../shirt_section/shirt_right_button")
group = SubResource( 1 )
clip_text = true

[node name="seperator1" type="HSeparator" parent="panel/vert_box"]
margin_top = 88.0
margin_right = 424.0
margin_bottom = 92.0

[node name="shirt_label" type="Label" parent="panel/vert_box"]
margin_top = 97.0
margin_right = 424.0
margin_bottom = 114.0
text = "Shirt"
align = 1
valign = 1

[node name="shirt_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 119.0
margin_right = 424.0
margin_bottom = 143.0
custom_constants/separation = 18
alignment = 1

[node name="shirt_left_button" parent="panel/vert_box/shirt_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../hair_color_section/left_button")
focus_neighbour_right = NodePath("../shirt_right_button")
focus_neighbour_bottom = NodePath("../../shirt_color_section/left_button")
group = SubResource( 1 )
clip_text = true

[node name="Label" type="Label" parent="panel/vert_box/shirt_section"]
margin_left = 207.0
margin_top = 3.0
margin_right = 217.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="shirt_right_button" parent="panel/vert_box/shirt_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../shirt_left_button")
focus_neighbour_top = NodePath("../../hair_color_section/right_button")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../shirt_color_section/right_button")
group = SubResource( 1 )
clip_text = true

[node name="shirt_color_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 148.0
margin_right = 424.0
margin_bottom = 180.0
custom_constants/separation = 7
alignment = 1

[node name="left_button" parent="panel/vert_box/shirt_color_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../shirt_section/shirt_left_button")
focus_neighbour_right = NodePath("../right_button")
focus_neighbour_bottom = NodePath("../../pants_section/pants_left_button")
group = SubResource( 1 )
clip_text = true

[node name="shirt_color" type="ColorRect" parent="panel/vert_box/shirt_color_section"]
margin_left = 196.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="right_button" parent="panel/vert_box/shirt_color_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../left_button")
focus_neighbour_top = NodePath("../../shirt_section/shirt_right_button")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../pants_section/pants_right_button")
group = SubResource( 1 )
clip_text = true

[node name="seperator2" type="HSeparator" parent="panel/vert_box"]
margin_top = 185.0
margin_right = 424.0
margin_bottom = 189.0

[node name="pants_label" type="Label" parent="panel/vert_box"]
margin_top = 194.0
margin_right = 424.0
margin_bottom = 211.0
text = "Pants"
align = 1
valign = 1

[node name="pants_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 216.0
margin_right = 424.0
margin_bottom = 240.0
custom_constants/separation = 18
alignment = 1

[node name="pants_left_button" parent="panel/vert_box/pants_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../shirt_color_section/left_button")
focus_neighbour_right = NodePath("../pants_right_button")
focus_neighbour_bottom = NodePath("../../pants_color_section/left_button")
group = SubResource( 1 )
clip_text = true

[node name="Label" type="Label" parent="panel/vert_box/pants_section"]
margin_left = 207.0
margin_top = 3.0
margin_right = 217.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="pants_right_button" parent="panel/vert_box/pants_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../pants_left_button")
focus_neighbour_top = NodePath("../../shirt_color_section/right_button")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../pants_color_section/right_button")
group = SubResource( 1 )
clip_text = true

[node name="pants_color_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 245.0
margin_right = 424.0
margin_bottom = 277.0
custom_constants/separation = 7
alignment = 1

[node name="left_button" parent="panel/vert_box/pants_color_section" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../../../../back_button")
focus_neighbour_top = NodePath("../../pants_section/pants_left_button")
focus_neighbour_right = NodePath("../right_button")
focus_neighbour_bottom = NodePath("../../hair_section/hair_left_button")
group = SubResource( 1 )
clip_text = true

[node name="pants_color" type="ColorRect" parent="panel/vert_box/pants_color_section"]
margin_left = 196.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="right_button" parent="panel/vert_box/pants_color_section" instance=ExtResource( 5 )]
margin_left = 235.0
margin_right = 259.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../left_button")
focus_neighbour_top = NodePath("../../pants_section/pants_right_button")
focus_neighbour_right = NodePath("../../../../start_button")
focus_neighbour_bottom = NodePath("../../hair_section/hair_right_button")
group = SubResource( 1 )
clip_text = true

[node name="name" type="LineEdit" parent="panel"]
margin_left = 301.0
margin_top = 34.0
margin_right = 717.0
margin_bottom = 66.0
focus_neighbour_left = NodePath("../../back_button")
focus_neighbour_top = NodePath("../vert_box/pants_color_section/left_button")
focus_neighbour_right = NodePath("../../start_button")
focus_neighbour_bottom = NodePath("../vert_box/hair_section/hair_left_button")
focus_next = NodePath("../../start_button")
focus_previous = NodePath("../../back_button")
focus_mode = 1
align = 1
focus_mode = 1
context_menu_enabled = false
placeholder_text = "Name"

[node name="back_button" type="Button" parent="."]
margin_left = 100.0
margin_top = 280.0
margin_right = 200.0
margin_bottom = 320.0
rect_scale = Vector2( 1.5, 1.5 )
text = "BACK"

[node name="start_button" type="Button" parent="."]
margin_left = 774.0
margin_top = 280.0
margin_right = 874.0
margin_bottom = 320.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
disabled = true
text = "START"

[node name="Tween" type="Tween" parent="."]
[connection signal="button_up" from="panel/vert_box/hair_section/hair_left_button" to="." method="_on_hair_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/hair_section/hair_right_button" to="." method="_on_hair_right_button_button_up"]
[connection signal="button_up" from="panel/vert_box/hair_color_section/left_button" to="." method="hair_color_left"]
[connection signal="button_up" from="panel/vert_box/hair_color_section/right_button" to="." method="hair_color_right"]
[connection signal="button_up" from="panel/vert_box/shirt_section/shirt_left_button" to="." method="_on_shirt_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/shirt_section/shirt_right_button" to="." method="_on_shirt_right_button_button_up"]
[connection signal="button_up" from="panel/vert_box/shirt_color_section/left_button" to="." method="shirt_color_left"]
[connection signal="button_up" from="panel/vert_box/shirt_color_section/right_button" to="." method="shirt_color_right"]
[connection signal="button_up" from="panel/vert_box/pants_section/pants_left_button" to="." method="_on_pants_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/pants_section/pants_right_button" to="." method="_on_pants_right_button_button_up"]
[connection signal="button_up" from="panel/vert_box/pants_color_section/left_button" to="." method="pants_color_left"]
[connection signal="button_up" from="panel/vert_box/pants_color_section/right_button" to="." method="pants_color_right"]
[connection signal="text_changed" from="panel/name" to="." method="check_name"]
[connection signal="button_up" from="back_button" to="." method="_on_back_button_button_up"]
[connection signal="button_up" from="start_button" to="." method="_on_start_button_button_up"]
